* Changed the naming convention of icomoon.

--- a/app/one-tab.html
+++ b/app/one-tab.html
@@ -8,7 +8,7 @@
         <!-- endbuild -->
         <!-- build:css styles/main.css -->
         <link href="styles/main.css" rel="stylesheet">
-        <link rel="stylesheet" href="bower_components/icomoon/styles/style.css">
+        <link rel="stylesheet" href="bower_components/icomoon/style.css">
         <!-- endbuild -->
     </head>
     <body id="ng-app" ng-app="TabMagicApp">
@@ -25,7 +25,7 @@
                 </div>
                 <div class="element" ng-class="{ selected: navigation === 'bringToOne' }" ng-click="navigation = 'bringToOne'">
                     <div class="text">Bring to One</div>
-                    <div class="icon"><i class="fa icon-filter-list fa-2x"></i></div>
+                    <div class="icon"><i class="fa icon-filter_list fa-2x"></i></div>
                 </div>
                 <div class="element" ng-class="{ selected: navigation === 'settings' }" ng-click="navigation = 'settings'">
                     <div class="text">Settings</div>
